# evidential-calculator

./: .gitmodules  Dockerfile  readme.md  readme.org  requirements.txt  setup.cfg  setup.py
examples/: Dockerfile  acme.org  calc-se-expressiveness.org  example-1.org  example-2.org  example-3.org  example-acme.org  example-lst-1.org  example-lst-2.org  example-lst-3.org  example-lst-4.org  init.el  lst-1.org  lst-2.org  lst-3.org  lst-4.org  readme.org
examples/models/: acme-model.smv  lst-4.smv
examples/notebooks/: example-1.org
src/: calc_evidence.py
src/evidence_set_calculation/: smv_based_evidence.py  utils.py
src/evidential_calculator/: __init__.py  calc_evidence.py  smv_based_evidence.py  utils.py
