[metadata]
name = evidential_calculator
version = 0.0.1
url = https://github.com/jgru/evidential-calculator
classifiers =
    License :: GPL 2.0
    Programming Language :: Python :: 3

[options]
include_package_data = true
python_requires = >=3.9, <3.10
install_requires =
    pynusmv @ https://github.com/LouvainVerificationLab/pynusmv/archive/refs/heads/master.zip
package_dir=
    =src
packages=find:

    
[options.entry_points]
console_scripts =
    calc_evidence = evidential_calculator.calc_evidence:main

[options.packages.find]
where=src
exclude =
    examples*
